--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,10 @@ lib/
 .idea
 
 package-lock.json
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
