--- a/package.json
+++ b/package.json
@@ -32,25 +32,26 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@babel/core": "7.13.10",
-    "@babel/generator": "7.13.9",
-    "@babel/parser": "7.13.10",
-    "@babel/traverse": "7.13.0",
-    "@babel/types": "7.13.0",
-    "@types/lodash": "4.14.168",
+    "@babel/core": "7.15.8",
+    "@babel/generator": "7.15.8",
+    "@babel/parser": "7.15.8",
+    "@babel/traverse": "7.15.4",
+    "@babel/types": "7.15.6",
+    "@types/lodash": "4.14.176",
     "javascript-natural-sort": "0.7.1",
     "lodash": "4.17.21"
   },
   "devDependencies": {
-    "@types/chai": "4.2.15",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.34",
-    "jest": "26.6.3",
-    "prettier": "2.3.1",
-    "ts-jest": "26.5.3",
-    "typescript": "4.2.3"
+    "@types/chai": "4",
+    "@types/jest": "27",
+    "@types/node": "16",
+    "jest": "27.3.1",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.7",
+    "typescript": "4.4.4"
   },
   "peerDependencies": {
     "prettier": "2.x"
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
